# DFA-in-C

./: CMakeLists.txt  Doxyfile  README.md  dfa.c  dfa.h  download_dependencies.sh
examples/: example.c
include/: Dfa.h  dfa.h
src/: Dfa.c  dfa.c
